// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshots > matches snapshot for BLOCK denial 1`] = `
<div>
  <div
    class="rounded-xl border border-slate-800/70 bg-slate-950/50 shadow-lg shadow-black/30 overflow-hidden"
  >
    <div
      class="px-4 py-4 space-y-6 py-6"
    >
      <div
        class="flex items-start gap-3 rounded-lg border border-rose-500/40 bg-rose-500/10 p-4"
      >
        <svg
          class="lucide lucide-xcircle h-6 w-6 text-rose-400 flex-shrink-0 mt-0.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m15 9-6 6"
          />
          <path
            d="m9 9 6 6"
          />
        </svg>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-2 flex-wrap"
          >
            <span
              class="text-base font-semibold text-rose-300"
            >
              Action Denied
            </span>
            <span
              class="inline-flex items-center gap-1 rounded-full border px-2.5 py-0.5 text-[11px] font-medium uppercase tracking-wide border-rose-500/40 bg-rose-500/10 text-rose-200"
            >
              BLOCK_NOT_PERMITTED
            </span>
          </div>
          <p
            class="mt-1 text-sm text-rose-300/80 leading-relaxed"
          >
            Agent GID-01 does not have BLOCK permission
          </p>
        </div>
      </div>
      <div
        class="flex items-center gap-4 text-xs text-slate-500"
      >
        <span>
          Agent:
          <code
            class="text-slate-400"
          >
            GID-01
          </code>
        </span>
        <span>
          Intent:

          <code
            class="text-slate-400"
          >
            BLOCK
             →
            production.deploy
          </code>
        </span>
        <span>
          Routed to:

          <code
            class="text-emerald-400"
          >
            GID-00
          </code>
        </span>
      </div>
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-2 mb-3"
        >
          <svg
            class="lucide lucide-alert-circle h-4 w-4 text-amber-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
          <h4
            class="text-xs font-semibold uppercase tracking-wider text-amber-300"
          >
            Constraints
          </h4>
        </div>
        <ul
          class="space-y-2"
        >
          <li
            class="flex items-start gap-2 text-sm text-slate-300"
          >
            <span
              class="mt-1.5 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-amber-500/60"
            />
            <span
              class="leading-relaxed"
            >
              Agent lacks BLOCK authority
            </span>
          </li>
          <li
            class="flex items-start gap-2 text-sm text-slate-300"
          >
            <span
              class="mt-1.5 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-amber-500/60"
            />
            <span
              class="leading-relaxed"
            >
              Only Sam (GID-06) and ALEX (GID-08) may BLOCK
            </span>
          </li>
        </ul>
      </div>
      <div
        class="space-y-3"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-chevron-right h-4 w-4 text-emerald-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
          <h4
            class="text-xs font-semibold uppercase tracking-wider text-emerald-300"
          >
            Allowed Next Steps
          </h4>
        </div>
        <div
          class="space-y-2"
        >
          <button
            class="flex w-full items-center gap-3 rounded-lg border px-4 py-3 text-left transition-colors border-sky-500/40 bg-sky-500/10 text-sky-200 hover:bg-sky-500/20 hover:border-sky-500/60"
            type="button"
          >
            <svg
              class="lucide lucide-message-square h-5 w-5 flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
              />
            </svg>
            <div
              class="flex-1 min-w-0"
            >
              <span
                class="block text-xs font-semibold uppercase tracking-wider opacity-60 mb-0.5"
              >
                PROPOSE
              </span>
              <span
                class="block text-sm leading-snug truncate"
              >
                Submit block request to authorized agent
              </span>
              <span
                class="block text-xs opacity-50 mt-1 font-mono"
              >
                scope:
                governance.block.request
              </span>
            </div>
            <svg
              class="lucide lucide-arrow-right h-4 w-4 flex-shrink-0 opacity-40"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="m12 5 7 7-7 7"
              />
            </svg>
          </button>
          <button
            class="flex w-full items-center gap-3 rounded-lg border px-4 py-3 text-left transition-colors border-amber-500/40 bg-amber-500/10 text-amber-200 hover:bg-amber-500/20 hover:border-amber-500/60"
            type="button"
          >
            <svg
              class="lucide lucide-alert-triangle h-5 w-5 flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3Z"
              />
              <path
                d="M12 9v4"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
            <div
              class="flex-1 min-w-0"
            >
              <span
                class="block text-xs font-semibold uppercase tracking-wider opacity-60 mb-0.5"
              >
                ESCALATE
              </span>
              <span
                class="block text-sm leading-snug truncate"
              >
                Request human review of blocking action
              </span>
              <span
                class="block text-xs opacity-50 mt-1 font-mono"
              >
                →
                human.operator
              </span>
            </div>
            <svg
              class="lucide lucide-arrow-right h-4 w-4 flex-shrink-0 opacity-40"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="m12 5 7 7-7 7"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="pt-4 border-t border-slate-800/50"
      >
        <p
          class="text-xs text-slate-600"
        >
          Correlation ID:

          <code
            class="text-slate-500"
          >
            test-correlation-123
          </code>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshots > matches snapshot for EXECUTE denial 1`] = `
<div>
  <div
    class="rounded-xl border border-slate-800/70 bg-slate-950/50 shadow-lg shadow-black/30 overflow-hidden"
  >
    <div
      class="px-4 py-4 space-y-6 py-6"
    >
      <div
        class="flex items-start gap-3 rounded-lg border border-rose-500/40 bg-rose-500/10 p-4"
      >
        <svg
          class="lucide lucide-xcircle h-6 w-6 text-rose-400 flex-shrink-0 mt-0.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m15 9-6 6"
          />
          <path
            d="m9 9 6 6"
          />
        </svg>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-2 flex-wrap"
          >
            <span
              class="text-base font-semibold text-rose-300"
            >
              Action Denied
            </span>
            <span
              class="inline-flex items-center gap-1 rounded-full border px-2.5 py-0.5 text-[11px] font-medium uppercase tracking-wide border-rose-500/40 bg-rose-500/10 text-rose-200"
            >
              EXECUTE_NOT_PERMITTED
            </span>
          </div>
          <p
            class="mt-1 text-sm text-rose-300/80 leading-relaxed"
          >
            Agent GID-01 does not have EXECUTE permission
          </p>
        </div>
      </div>
      <div
        class="flex items-center gap-4 text-xs text-slate-500"
      >
        <span>
          Agent:
          <code
            class="text-slate-400"
          >
            GID-01
          </code>
        </span>
        <span>
          Intent:

          <code
            class="text-slate-400"
          >
            EXECUTE
             →
            production.deploy
          </code>
        </span>
        <span>
          Routed to:

          <code
            class="text-emerald-400"
          >
            GID-00
          </code>
        </span>
      </div>
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-2 mb-3"
        >
          <svg
            class="lucide lucide-alert-circle h-4 w-4 text-amber-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
          <h4
            class="text-xs font-semibold uppercase tracking-wider text-amber-300"
          >
            Constraints
          </h4>
        </div>
        <ul
          class="space-y-2"
        >
          <li
            class="flex items-start gap-2 text-sm text-slate-300"
          >
            <span
              class="mt-1.5 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-amber-500/60"
            />
            <span
              class="leading-relaxed"
            >
              Agent lacks EXECUTE authority
            </span>
          </li>
          <li
            class="flex items-start gap-2 text-sm text-slate-300"
          >
            <span
              class="mt-1.5 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-amber-500/60"
            />
            <span
              class="leading-relaxed"
            >
              Target is production-scoped
            </span>
          </li>
        </ul>
      </div>
      <div
        class="space-y-3"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-chevron-right h-4 w-4 text-emerald-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
          <h4
            class="text-xs font-semibold uppercase tracking-wider text-emerald-300"
          >
            Allowed Next Steps
          </h4>
        </div>
        <div
          class="space-y-2"
        >
          <button
            class="flex w-full items-center gap-3 rounded-lg border px-4 py-3 text-left transition-colors border-sky-500/40 bg-sky-500/10 text-sky-200 hover:bg-sky-500/20 hover:border-sky-500/60"
            type="button"
          >
            <svg
              class="lucide lucide-message-square h-5 w-5 flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
              />
            </svg>
            <div
              class="flex-1 min-w-0"
            >
              <span
                class="block text-xs font-semibold uppercase tracking-wider opacity-60 mb-0.5"
              >
                PROPOSE
              </span>
              <span
                class="block text-sm leading-snug truncate"
              >
                Draft change and submit for review
              </span>
              <span
                class="block text-xs opacity-50 mt-1 font-mono"
              >
                scope:
                backend.tests
              </span>
            </div>
            <svg
              class="lucide lucide-arrow-right h-4 w-4 flex-shrink-0 opacity-40"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="m12 5 7 7-7 7"
              />
            </svg>
          </button>
          <button
            class="flex w-full items-center gap-3 rounded-lg border px-4 py-3 text-left transition-colors border-amber-500/40 bg-amber-500/10 text-amber-200 hover:bg-amber-500/20 hover:border-amber-500/60"
            type="button"
          >
            <svg
              class="lucide lucide-alert-triangle h-5 w-5 flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3Z"
              />
              <path
                d="M12 9v4"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
            <div
              class="flex-1 min-w-0"
            >
              <span
                class="block text-xs font-semibold uppercase tracking-wider opacity-60 mb-0.5"
              >
                ESCALATE
              </span>
              <span
                class="block text-sm leading-snug truncate"
              >
                Request human authorization
              </span>
              <span
                class="block text-xs opacity-50 mt-1 font-mono"
              >
                →
                human.operator
              </span>
            </div>
            <svg
              class="lucide lucide-arrow-right h-4 w-4 flex-shrink-0 opacity-40"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="m12 5 7 7-7 7"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="pt-4 border-t border-slate-800/50"
      >
        <p
          class="text-xs text-slate-600"
        >
          Correlation ID:

          <code
            class="text-slate-500"
          >
            test-correlation-123
          </code>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshots > matches snapshot for invalid plan 1`] = `
<div>
  <div
    class="rounded-xl border border-slate-800/70 bg-slate-950/50 shadow-lg shadow-black/30 border-rose-500/40 bg-rose-500/5"
  >
    <div
      class="px-4 py-4 py-6"
    >
      <div
        class="flex items-start gap-3"
      >
        <svg
          class="lucide lucide-xcircle h-6 w-6 text-rose-400 flex-shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m15 9-6 6"
          />
          <path
            d="m9 9 6 6"
          />
        </svg>
        <div
          class="space-y-1"
        >
          <p
            class="text-sm font-semibold text-rose-300"
          >
            Governance Response Invalid
          </p>
          <p
            class="text-xs text-rose-400/80"
          >
            Governance response invalid: missing correction_plan
          </p>
          <p
            class="text-xs text-slate-500 mt-2"
          >
            Contact system administrator. No actions available.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshots > matches snapshot for no-steps denial 1`] = `
<div>
  <div
    class="rounded-xl border border-slate-800/70 bg-slate-950/50 shadow-lg shadow-black/30 overflow-hidden"
  >
    <div
      class="px-4 py-4 space-y-6 py-6"
    >
      <div
        class="flex items-start gap-3 rounded-lg border border-rose-500/40 bg-rose-500/10 p-4"
      >
        <svg
          class="lucide lucide-xcircle h-6 w-6 text-rose-400 flex-shrink-0 mt-0.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m15 9-6 6"
          />
          <path
            d="m9 9 6 6"
          />
        </svg>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-2 flex-wrap"
          >
            <span
              class="text-base font-semibold text-rose-300"
            >
              Action Denied
            </span>
            <span
              class="inline-flex items-center gap-1 rounded-full border px-2.5 py-0.5 text-[11px] font-medium uppercase tracking-wide border-rose-500/40 bg-rose-500/10 text-rose-200"
            >
              DELETE_FORBIDDEN
            </span>
          </div>
          <p
            class="mt-1 text-sm text-rose-300/80 leading-relaxed"
          >
            DELETE operations are globally forbidden
          </p>
        </div>
      </div>
      <div
        class="flex items-center gap-4 text-xs text-slate-500"
      >
        <span>
          Agent:
          <code
            class="text-slate-400"
          >
            GID-01
          </code>
        </span>
        <span>
          Intent:

          <code
            class="text-slate-400"
          >
            EXECUTE
             →
            production.deploy
          </code>
        </span>
        <span>
          Routed to:

          <code
            class="text-emerald-400"
          >
            GID-00
          </code>
        </span>
      </div>
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-2 mb-3"
        >
          <svg
            class="lucide lucide-alert-circle h-4 w-4 text-amber-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
          <h4
            class="text-xs font-semibold uppercase tracking-wider text-amber-300"
          >
            Constraints
          </h4>
        </div>
        <ul
          class="space-y-2"
        >
          <li
            class="flex items-start gap-2 text-sm text-slate-300"
          >
            <span
              class="mt-1.5 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-amber-500/60"
            />
            <span
              class="leading-relaxed"
            >
              DELETE operations are globally forbidden
            </span>
          </li>
          <li
            class="flex items-start gap-2 text-sm text-slate-300"
          >
            <span
              class="mt-1.5 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-amber-500/60"
            />
            <span
              class="leading-relaxed"
            >
              No agent may delete resources without human approval
            </span>
          </li>
        </ul>
      </div>
      <div
        class="rounded-lg border border-slate-700/50 bg-slate-800/30 p-4"
      >
        <div
          class="flex items-center gap-2 text-slate-400"
        >
          <svg
            class="lucide lucide-info h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <span
            class="text-sm"
          >
            No allowed next steps. Escalation to human operator may be required.
          </span>
        </div>
      </div>
      <div
        class="pt-4 border-t border-slate-800/50"
      >
        <p
          class="text-xs text-slate-600"
        >
          Correlation ID:

          <code
            class="text-slate-500"
          >
            test-correlation-123
          </code>
        </p>
      </div>
    </div>
  </div>
</div>
`;
